--- a/index.html
+++ b/index.html
@@ -14,50 +14,51 @@
         <a href="Paginas">Paginas</a>
         <a href="Blog">Blog</a>
     </nav>
-    <main>
-        <h1>Recetas de Cocina</h1>
-        <div>
+    <main class="h1Color">
+        <h1 class="row">Recetas de Cocina</h1>
+        <div class="row">
             <img src="./image/image (3).png" alt="alfajor de maicena" width="150px">
             <img src="./image/image (2).png" alt="empanadas" width="150px">
             <img src="./image/image (1).png" alt="ensalada" width="150px">
         </div>
     </main>
     <section>
-        <h2>Recetas Populares</h2>
+        <h2 class="h2-selection">Recetas Populares</h2>
         <div>
-            <div class="card card-1">
-                <div>
+            <div class="row row-1">
+                <div class="card card-1 tortaBackground">
                     <p>Torta de Chocolate Otoñal</p>
                 </div>
-                <div>
+                <div class="card card-2 raviolesBackground">
                     <p>Ravioles con Boloñesa</p>
                 </div>
             </div>
-             <div>
-                <div>
+             <div class="row">
+                <div class="card card-3 tartaBackground">
                     <p>Tarta de Espinaca</p>
                 </div>
-                <div>
+                <div class="card card-4 espinacaBackground">
                     <p>Tarta de Ricota</p>
                 </div>
              </div>
         </div>
     </section>
     <main>
-        <h2>Ultimas Recetas</h2>
-        <div>
-            <div>
+        <h2 class="h2-main">Ultimas Recetas</h2>
+    
+        <div class="row">
+            <div class="card card-5 carneBackground">
                 <p>Carne al Horno</p>
             </div>
-            <div>
+            <div class="card card-6 pastaBackground">
                 <p>Fideos Caseros</p>
             </div>
         </div>
-        <div>
-            <div>
+        <div class="row">
+            <div class="card card-7 pizzaBackground">
                 <p>Pizzas</p>
             </div>
-            <div>
+            <div class="card card-8 sorrentinosBackground">
                 <p>sorrentinos</p>
             </div>
         </div>
